@@ -1204,8 +1204,8 @@ static int hwcrhk_mutex_init(HWCryptoHook_Mutex* mt,
 	{
 	mt->lockid = CRYPTO_get_new_dynlockid();
 	if (mt->lockid == 0)
-		return -1;
-	return 0;
+		return 1; /* failure */
+	return 0; /* success */
 	}
 
 static int hwcrhk_mutex_lock(HWCryptoHook_Mutex *mt)
